# catfood

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: isort.yaml  pytest.yaml
catfood/: __init__.py  constant.py
catfood/exceptions/: __init__.py  operation.py  request.py
catfood/functions/: __init__.py  files.py  print.py  terminal.py
catfood/functions/format/: __init__.py  github.py
catfood/functions/github/: __init__.py  api.py  token.py
tests/: test_constant.py
tests/functions/: test_files.py  test_print.py  test_terminal.py
tests/functions/format/: test_github.py
tests/functions/github/: test_api.py  test_token.py
